# signaip

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker.env  env.dev  env.local.template  env.prod  generate-env.ps1  init-db.sql  nginx.conf  start-dev.ps1  start-docker.ps1  start-prod.ps1  stop-dev.ps1  test-docker.bat  test-docker.ps1  test-integration.ps1
backend/: .dockerignore  Dockerfile  env.example  install_and_run.ps1  pyproject.toml  pytest.ini  run_tests.ps1
backend/src/app/: __init__.py  config.py  config_test.py  container.py  main.py
backend/src/app/adapters/: __init__.py
backend/src/app/adapters/auth/: auth_adapter.py
backend/src/app/adapters/db/: session.py
backend/src/app/api/dependencies/: auth_dependency.py  brand_dependency.py
backend/src/app/api/routes/: brand_routes.py
backend/src/app/core/: logger.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/entities/: brand.py
backend/src/app/domain/ports/: auth_port.py  brand_port.py
backend/src/app/domain/services/: brand_service.py
backend/src/app/domain/use_cases/: brand_use_case.py
backend/src/app/schemas/: brand_dto.py
backend/tests/: conftest.py  test_app.py
backend/tests/api/: test_brand_routes.py
backend/tests/factories/: brand_factory.py
backend/tests/integration/: test_brand_crud.py
backend/tests/unit/: test_container.py
backend/tests/unit/adapters/: test_auth_adapter.py  test_brand_repository.py
backend/tests/unit/domain/: test_brand_entity.py  test_brand_service.py  test_brand_use_case.py
frontend/: .dockerignore  (+8 more)
(+41 files in other folders)
